--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "doctrine/dbal": "^2.5",
         "barryvdh/laravel-cors": "^0.9.2",
+        "doctrine/dbal": "^2.5",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
-        "mpdf/mpdf": "^6.1"
+        "mpdf/mpdf": "^6.1",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.3",
