--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,9 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
+MAIL_SSLOPTIONS_ALLOW_SELF_SIGNED=
+MAIL_SSLOPTIONS_VERIFY_PEER=
+MAIL_SSLOPTIONS_VERIFY_PEER_NAME=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
