--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ limesurvey_password=secret
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+SESSION_DOMAIN=
+SESSION_SECURE_COOKIE=
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
