--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "barryvdh/laravel-snappy": "^0.4.0",
         "cerbero/command-validator": "^1.0",
         "doctrine/dbal": "^2.5",
-        "h4cc/wkhtmltoimage-amd64": "0.12.x",
-        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "zxp86021/wkhtmltoimage-amd64": "^0.12.4",
+        "zxp86021/wkhtmltopdf-amd64": "^0.12.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
